--- a/nablaweb/templates/500.html
+++ b/nablaweb/templates/500.html
@@ -1,4 +1,4 @@
-{% extends "base_site.html" %}
+{% extends "base.html" %}
 {% block content %}
 <h2>Ooops!</h2>
 <p>Her har det skjedd noe galt! Ta kontakt med webkom på <a
