--- a/nablaweb/news/templates/news/news_summary_include.html
+++ b/nablaweb/news/templates/news/news_summary_include.html
@@ -4,7 +4,7 @@
 {% load classname %}
 
 
-<div class="col-md-{% if narrow %}4{% else %}8{% endif %} news_item {{ news.content_type.model }}">
+<div class="col-md-{% if narrow %}6{% else %}12{% endif %} news_item {{ news.content_type.model }}">
     {% if news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
         {% if narrow %}
@@ -15,8 +15,10 @@
         </a>
     {% endif %}
 
-    {% if narrow %}<h3>{% else %}<h2>{% endif %}{{ news.headline }}{% if narrow %}</h3>{% else %}</h2>{% endif %}
+    {% if narrow %}<h3>{% else %}<h2>{% endif %}
+        {{ news.headline }}
+    {% if narrow %}</h3>{% else %}</h2>{% endif %}
     {{ news.lead_paragraph|markdown|wikilinks}}
 
-        <p><a class="btn" href="{{ news.get_absolute_url }}">Les mer &raquo;</a></p>
+    <p><a class="btn btn-default" href="{{ news.get_absolute_url }}">Les mer &raquo;</a></p>
 </div>
