--- a/nablaweb/news/templates/news/news_list.html
+++ b/nablaweb/news/templates/news/news_list.html
@@ -59,45 +59,13 @@
 
 {% block sidebar %}
 
-{{ sidebarinfo.content|markdown }}
+    {{ sidebarinfo.content|markdown }}
 
-
-{% if upcoming_events %}
-
-    <h3>Kommende arrangement</h3>
-    <div class="well upcoming"><!-- kommende arrangement -->
-        <ul class="nav">
-
-            {% for event in upcoming_events %}
-            <li>
-                <a href="{{ event.get_absolute_url }}">
-                    <time 
-                        class="label label-default"
-                        datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"j.M" }}
-                    </time>
-                    {{ event.headline }} 
-                    {% if event.registration_required %}
-                        <span title="Ledige plasser / Totalt antall plasser">{{ event.users_attending }}/{{ event.places }}</span>
-                    {% endif %}
-                </a>
-            </li>
-            {% endfor %}
-
-        </ul>
-    </div><!-- end kommende arrangement -->
-
-{% endif %}
+    {% include "events/includes/upcoming_events.html" %}
 
 {% endblock sidebar %}
 
 {% block below_ad %}
-{% include "news/poll_include.html" %}
-    <div class="ad box hidden-phone">
-        <div class="center">
-            <h3>Nyeste xkcd: {{xkcd_safe_title}} </h3>
-            <a href="http://xkcd.com/">
-                <img src="{{xkcd_img}}" title="{{xkcd_alt}}" alt="einstein">
-            </a>                
-        </div>
-    </div>
+    {% include "poll/poll_include.html" %}
+    {% include "includes/newest_xkcd.html" %}
 {% endblock below_ad %}
