--- a/static/css/default.css
+++ b/static/css/default.css
@@ -25,10 +25,11 @@
         margin-bottom: 5px;
         overflow: hidden;    /* clear floats */
     }
-
     header img { width: 200px; }
     aside h3 { margin-top: 15px; }
     aside h3:first-child { margin-top: 0; }
+
+    form.dropdown-menu { padding: 5px; }
 
     h2 { margin-bottom: 5px; }
     h3 { margin-bottom: 5px; }
@@ -45,13 +46,6 @@
         opacity: 0.5;
         -moz-opacity: 0.5;
         -webkit-opacity: 0.5;
-    }
-
-
-    #navbar-loginbox input {
-        width: 57px;
-        padding: 2px;
-        font-size: 0.9em;
     }
 
     .news_item {
@@ -187,7 +181,7 @@
 
     form#searchtop {
         margin-bottom: 0px;
-        margin-top: 19px; /* Logohøyde minus høyden på formen */
+        margin-top: 15px; /* Logohøyde minus høyden på formen */
     }
 
 /* Endringer i Bootstrap-farger */
@@ -195,14 +189,6 @@
 .navbar .nav > li > a { color: #555;}/* Navbar link color */
 
 /* News */
-
-/*.navbar .nav > li > a {
-  float: none;
-  padding: 10px 14px 10px;
-  color: #777777;
-  text-decoration: none;
-  text-shadow: 0 1px 0 #ffffff;
-}*/
 
 .advert {
     height: 100%;
