--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -43,130 +43,129 @@
 <div class="container">{# main container #}
 
 <header>
-    <a class="pull-left" href="/">
-        {% block header_logo %}
-        <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
-        {% endblock header_logo %}
-    </a>
-    <form id="searchtop" class="form-inline pull-right" method="get" action="/search/">
-        <div class="input-group">
-            <input name="q" placeholder="Søk..." type="text" class="form-control">
-            <div class="input-group-btn">
-                <button type="submit" class="btn btn-default">
-                    <span class="glyphicon glyphicon-search"></i> 
-                </button>
+    <div class="page-header">
+        <a class="pull-left" href="/">
+            {% block header_logo %}
+                <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
+            {% endblock header_logo %}
+        </a>
+
+        <form id="searchtop" class="pull-right" method="get" action="/search/">
+            <div class="input-group" style="width:150px">
+                <input name="q" placeholder="Søk..." type="text" class="form-control">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button>
+                </span>
             </div>
-        </div>
-    </form>
-    {% block partner_logo %}
-    <a class="pull-right partner" href="/hovedsamarbeidspartner/cmr/">
-        <img src="{{ STATIC_URL }}img/CMR_logo.png" alt="CMR">
-    </a>
-    {% endblock %}
+        </form>
+        {% block partner_logo %}
+        <a class="pull-right" href="/hovedsamarbeidspartner/cmr/">
+            <img src="{{ STATIC_URL }}img/CMR_logo.png" alt="CMR" style="height: 50px; width: auto; ">
+        </a>
+        {% endblock %}
+
+    </div>
 </header>
 
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-            {% block navbar_container %}
-            {# navigasjonslenker #}
-            <ul class="nav navbar-nav">
-                <li><a href="/">Hjem</a></li>
-                <li><a href="{% url "event_list" %}">Arrangement</a></li>
-                <li><a href="{% url "jobs_list" %}">Karriere</a></li>
-                <li><a href="http://wiki.nabla.no/">Wiki</a></li>
+<nav class="navbar navbar-default">
+<div class="container" style="width: auto;">
+{% block navbar_container %}
+    {# navigasjonslenker #}
+    <ul class="nav navbar-nav">
+        <li><a href="/">Hjem</a></li>
+        <li><a href="{% url "event_list" %}">Arrangement</a></li>
+        <li><a href="{% url "jobs_list" %}">Karriere</a></li>
+        <li><a href="http://wiki.nabla.no/">Wiki</a></li>
 
-                <li class="dropdown">
-                    <a href="#komiteer"
-                        class="dropdown-toggle no-ajaxy"
-                        data-toggle="dropdown">
-                        Om Nabla
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" >
+        <li class="dropdown">
+            <a href="#om"
+                class="dropdown-toggle"
+                data-toggle="dropdown">
+                    Om Nabla
+                    <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" >
 
-                        {# Hent alle sider som starter på /om/ #}
-                        {% get_flatpages '/om/' as about_pages %}
-                        {% for page in about_pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                        {% endfor %}
+            {# Hent alle sider som starter på /om/ #}
+            {% get_flatpages '/om/' as about_pages %}
+            {% for page in about_pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
 
-                        {# Faste lenker om Nabla #}
-                        <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
-                        <li><a href="{% url "skraattcast_index" %}">Skraattcast</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#komiteer" class="dropdown-toggle no-ajaxy" data-toggle="dropdown">
-                        Komiteer
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" >
-                        {% cache 3600 com_list_dropdown %}
-                        {# Liste over komiteer #}
-                        {% for com in coms %}
-                        <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
-                        {% empty %}
-                        <li><a>Ingen komiteer eksisterer</a></li>
-                        {% endfor %}
-                        {% endcache %}
-                    </ul>
-                </li>
-                <li>
-                    <a href="http://bokskap.nabla.no">Bokskap</a>
-                </li>
-                {% if not user.is_authenticated %}
-                <li>
-                    <a href="{% url "accounts.views.user_register" %}">Registrer deg</a>
-                </li>
-                {% endif %}
+            {# Faste lenker om Nabla #}
+			    <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
+                <li><a href="{% url "skraattcast_index" %}">Skraattcast</a></li>
             </ul>
-            {# end navigasjonslenker #}
+        </li>
+        <li class="dropdown">
+            <a href="#komiteer"
+                class="dropdown-toggle"
+                data-toggle="dropdown">
+                    Komiteer
+                    <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" >
+                {% cache 3600 com_list_dropdown %}
+                {# Liste over komiteer #}
+                {% for com in coms %}
+                    <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
+                {% empty %}
+                    <li><a>Ingen komiteer eksisterer</a></li>
+                {% endfor %}
+                {% endcache %}
+            </ul>
+        </li>
+        <li><a href="http://bokskap.nabla.no">Bokskap</a></li>
+		{% if not user.is_authenticated %}
+            <li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>
+        {% endif %}
+    </ul>
+    {# end navigasjonslenker #}
 
-            {% if user.is_authenticated %}
-
-            {# bruker-dropdown #}
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown pull-right">
+    {% if user.is_authenticated %}
+        {# bruker-dropdown #}
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown navbar-right">
                 <a href="#bruker"
-                    class="dropdown-toggle no-ajaxy"
+                    class="dropdown-toggle"
                     data-toggle="dropdown">
-                    <span class="icon-user"></span>{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}
-                    <b class="caret"></b>
+                        <span class="glyphicon glyphicon-user"></span>
+                        {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}
+                        <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="{% url "accounts.views.view_member_profile" user.username %}">Vis profil</a></li>
                     <li><a href="{% url "accounts.views.edit_profile" %}">Endre profil</a></li>
                     <li><a href="{% url "password_change" %}">Endre passord</a></li>
                     <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
-                    <li><a class="no-ajaxy" href="/logout">Logg ut</a></li>
+                    <li><a href="/logout">Logg ut</a></li>
                     <li class="divider"></li>
                     <li><a href="{% url "accounts.views.list" %}">Medlemsliste</a></li>
                     {% if user.is_staff %}
-                    <li><a class="no-ajaxy" href="/admin">Admin</a></li>
+                        <li><a href="/admin">Admin</a></li>
                     {% endif %}
                 </ul>
-                </li>
-            </ul>
-            {# end bruker-dropdown #}
+            </li>
+        </ul>
+        {# end bruker-dropdown #}
+    {% else %}
+        {# loginboks #}
+        <!--        <a class="nav navbar-right btn btn-default"
+        href="/login">Logg inn</a>-->
+        <form id="navbar-loginbox" class="navbar-form navbar-right " action="/login/" method="post">
+            {% csrf_token %}
+            <input class="form-control" type="text" placeholder="Bruker" name="username" />
+            <input class="form-control" type="password"  placeholder="Passord" name="password" />
+            <button class="submit btn btn-default" type="submit">Login</button>
+        </form>
 
-            {% else %}
+        {# end loginboks #}
+    {% endif %}
+{% endblock navbar_container %}
 
-            {# loginboks #}
-            <form role="form" class="navbar-form navbar-right" action="/login/" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Bruker" name="username">
-                    <input type="password" class="form-control" placeholder="Passord" name="password">
-                </div>
-                <button class="btn btn-info" type="submit">Login</button>
-            </form>
-            {# end loginboks #}
-
-            {% endif %}
-            {% endblock navbar_container %}
-        </div>
-    </div>
+</div> {# end container #}
 </nav> {# end navbar #}
 
 {% if messages %}
