Lagt til django-bootstrap3 og fikset login-siden
Django-bootstrap3 legger til templatetags for å rendre blant annet
form-objekter med Bootstrap3. Login-siden blir nå gjort med dette.

I tilegg blir django-message lagt til med en templatetag fra django-bootstrap3.

--- a/nablaweb/accounts/templates/accounts/login.html
+++ b/nablaweb/accounts/templates/accounts/login.html
@@ -1,18 +1,14 @@
 {% extends "base.html" %}
+{% load bootstrap3 %}
 
 {% block title %}Logg inn{% endblock %}
 
-
 {% block content %}
-
 <form method="post" action="/login/?next={{ next }}" />
-    <p><table>
     {% csrf_token %}
-    {{ login_form.as_table }}
-    </table>
-    <input type="submit" value="Logg inn"/></p>
-    
+    {% bootstrap_form login_form %}
+    <button class="btn btn-lg btn-primary" type="submit">Logg inn</button>
     <p><a href="{% url "password_reset" %}">Har du glemt passordet ditt?</a></p>
-    
-    </form>
+</form>
 {% endblock %}
+
