--- a/nablaweb/accounts/templates/accounts/user_registration.html
+++ b/nablaweb/accounts/templates/accounts/user_registration.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bootstrap3 %}
 
 {% block title %}Brukerregistrering{% endblock %}
 
@@ -7,11 +7,10 @@
 
 <p>Her kan du registrere deg med ditt NTNU-brukernavn. Hvis brukernavnet er godkjent vil du motta en epost med passord.</p>
 
-<form method="POST" action="" >
-  {% csrf_token %}
-  {{ form.as_p }}
-
-  <input type="submit" value="Send" />
+<form method="post" action="" >
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    <button class="btn btn-lg btn-primary" type="submit">Send</button>
 </form>
 
 {% endblock %}
